# jira-search

./: .dockerignore  .gitignore  .releaserc.json  .releaserc.yml  CLAUDE.md  Dockerfile  Dockerfile.debian  Dockerfile.distroless  Dockerfile.ubi  Pipfile  README.md  SECURITY.md  config.yaml.example  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
api/: README.md  openapi.yaml
api/examples/: curl_examples.sh  javascript_client.js  python_client.py
charts/jira-search/: Chart.yaml  values.yaml
charts/jira-search/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  job.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
requirements/: TODO.md  functional_spec.md  nfr.md  prd.md
scripts/: setup-pre-commit.sh
src/jira_search/: __init__.py  __main__.py  api_auth.py  cli.py  config.py  database.py  jira_client.py  search.py  web.py  wsgi.py
src/jira_search/templates/: error.html  index.html
tests/: conftest.py  test_config.py  test_import.py  test_wsgi.py
